Fix T81214: Crash on Action constraint without action

A `NULL` pointer check was missing.